--- a/client/src/pages/auth/forms/Login.css
+++ b/client/src/pages/auth/forms/Login.css
@@ -89,6 +89,7 @@
 }
 
 .auth-form-button {
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
