--- a/client/src/pages/auth/forms/Register.css
+++ b/client/src/pages/auth/forms/Register.css
@@ -58,6 +58,7 @@
 }
 
 .auth-form-button {
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
